# emergent-sdk

./: .gitignore
.github/workflows/: ci.yml  publish.yml
python/: README.md  pyproject.toml  test_compat.py  test_live_api.py  test_sdk.py  test_user_workflow.py
python/emergentdb/: __init__.py  client.py
python/examples/: gemini_embeddings.py  openai_embeddings.py
skills/emdb-analytics/: SKILL.md
skills/emdb-delete/: SKILL.md
skills/emdb-insert/: SKILL.md
skills/emdb-namespaces/: SKILL.md
skills/emdb-search/: SKILL.md
typescript/: README.md  package-lock.json  package.json  test-compat.mjs  test-live-api.mjs  test-user-workflow.mjs
typescript/examples/: gemini-embeddings.mjs  openai-embeddings.mjs
typescript/src/: index.ts
