[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emergentdb"
version = "0.1.0"
description = "Official Python SDK for EmergentDB vector database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "httpx>=0.24.0",
  "dhi>=1.1.3",
]
keywords = ["vector", "database", "embedding", "search", "similarity", "emergentdb"]

[project.urls]
Homepage = "https://emergentdb.com"
Repository = "https://github.com/justrach/emergent-sdk"
Documentation = "https://emergentdb.com/docs"
